# kr-mkt-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.ouroboros/: pm.md
docs/: 2026-04-25-google-cloud-multi-agent-a2a-mcp.md  2026-04-26-meta-marketing-api-v25-research.md  auth-poc-checklist.md
docs/superpowers/plans/: 2026-05-05-kr-mkt-mcp-v1.md
docs/superpowers/specs/: 2026-04-26-codex-adversarial-review.md  2026-04-26-kr-mkt-mcp-design.md
scripts/: diagnose_tier_all.py  integration_test.py  test_user_scenario.py  verify_stdio.py
src/kr_mkt_mcp/: api_usage.py  config.py  dates.py  descriptions.py  meta_client.py  normalize.py  server.py  validation.py
src/kr_mkt_mcp/tools/: call_meta_api.py  check_api_health.py  get_creative_preview.py  get_performance.py  list_ad_accounts.py  list_ads.py  list_campaigns.py
tests/: conftest.py  test_api_usage.py  test_config.py  test_dates.py  test_descriptions.py  test_meta_client.py  test_normalize.py  test_security.py  test_server.py  test_smoke.py  test_tools_creative.py  test_tools_health.py  test_tools_list.py  test_tools_passthrough.py  test_tools_performance.py
tests/fixtures/: ad_accounts.json  ads.json  campaigns.json  campaigns_page1.json  campaigns_page2.json  creative_carousel.json  creative_image.json  creative_video.json  insights_breakdown_age.json  insights_campaign_tier1.json
