[project]
name = "kr-mkt-mcp"
version = "0.1.0"
description = "한국 마케터를 위한 Meta Ads 분석 MCP 서버 (V1: Meta only, read-only)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wnduq8", email = "juyeoppark@egnis.kr" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "meta-ads",
    "facebook-ads",
    "instagram-ads",
    "marketing",
    "korean-marketing",
    "advertising-analytics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP",
    "Natural Language :: Korean",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/wnduq8/kr-mkt-mcp"
Repository = "https://github.com/wnduq8/kr-mkt-mcp"
Issues = "https://github.com/wnduq8/kr-mkt-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
kr-mkt-mcp = "kr_mkt_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kr_mkt_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
